# Meituan-Competition_BITLZX

./: .gitignore  README.md
docs/: README.md
src/keyword_extractor/: CMakeLists.txt  package.xml
src/keyword_extractor/launch/: keyword_extractor.launch
src/keyword_extractor/msg/: KeywordsResult.msg
src/keyword_extractor/scripts/: keyword_extractor_node.py
src/local_planner/: CMakeLists.txt  package.xml
src/local_planner/config/: dwa_params.yaml
src/local_planner/launch/: local_planner.launch
src/local_planner/src/: dwaPlanner.cpp  goalAdv.cpp  localCostMap.cpp  localPlanner.cpp  pointcloud_filter_node.cpp  state_machine.cpp
src/magv_msgs/: CMakeLists.txt  package.xml
src/waypoint_example/: CMakeLists.txt  package.xml
src/waypoint_example/launch/: waypoint_example.launch
src/waypoint_example/scripts/: aruco_detector.py
src/yolo_detect/: CMakeLists.txt  package.xml
src/yolo_detect/launch/: yolo_detect.launch
src/yolo_detect/msg/: Detection.msg  FullDetection.msg  FullDetectionArray.msg
src/yolo_detect/scripts/: human_tracker.py  yolo_detector.py
